--- a/social-connect/src/pages/authenticate/auth.module.scss
+++ b/social-connect/src/pages/authenticate/auth.module.scss
@@ -2,7 +2,7 @@
 @import "form";
 
 .container {
-  width: 650px;
+  width: auto;
   height: 400px;
   margin: auto;
   // border: 2px solid black;
@@ -11,7 +11,7 @@
   > .form_container {
     width: 450px;
     height: 100%;
-    border: 1px solid blue;
+    // border: 1px solid blue;
     position: relative;
     float: left;
     overflow: hidden;
@@ -19,40 +19,97 @@
     @include medium-screen {
       float: initial;
       margin: auto;
+      box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+        rgba(0, 0, 0, 0.23) 0px 6px 6px;
     }
     @include small-screen {
       width: 100%;
     }
   }
   .side_bar {
+    @include flex(column, initial, center, 1rem);
+    padding: 5px;
+    color: white;
+    text-align: center;
     width: calc(100% - 450px);
-    border: 1px solid red;
+    // border: 1px solid red;
+    position: relative;
     height: 100%;
     float: left;
+    transition: all 0.1s ease-in-out;
+    background-image: url("../../assets/sidebar/login_potrait.png"),
+      url("../../assets/sidebar/signup_potrait.png");
+    background-repeat: no-repeat no-repeat;
+    background-size: 100% 398px, 100% 530px;
 
+    &::after {
+      content: "Login";
+      color: white;
+      font-size: 3rem;
+      position: absolute;
+      top: 08.2rem;
+      right: 0;
+      left: 0;
+      @include medium-screen {
+        display: none;
+      }
+    }
+    &.side_bar_move {
+      background-size: 0% 100%, 100% 530px;
+      &::after {
+        content: "Signup";
+        top: 12rem;
+      }
+    }
+
+    > p,
+    > span {
+      font-size: 1.5rem;
+    }
+    > button {
+      width: 100%;
+      height: 4rem;
+      color: black;
+      border: none;
+      border-radius: 0.3rem;
+      cursor: pointer;
+      @include flex(row, center, center, 5px);
+      font-size: 2rem;
+
+      &:active {
+        background-color: #aec2b6;
+      }
+    }
     // Responsive
 
     @include medium-screen {
-      display: block;
       float: initial;
       margin: auto;
       width: 450px;
-      height: 50px;
+      height: auto;
+      padding: 10px 40px;
+      background-size: 100% auto, 100% auto;
+      background-position: center;
+      box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+        rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+      &.side_bar_move {
+        background-size: 0% auto, 100% auto;
+        background-position: top;
+      }
     }
     @include small-screen {
       width: 100%;
     }
   }
   @include large-screen {
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
-      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
-      rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+      rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+      rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
   }
-  @include small-screen {
-    width: auto;
-  }
-  @include medium-screen {
-    width: auto;
+  @include large-screen {
+    margin-top: 30px;
+    width: 650px;
   }
 }
 
@@ -66,9 +123,7 @@
   margin: 20px auto;
   box-shadow: 10px 10px 30px rgb(254, 215, 188);
   border-radius: 50px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  @include flex(row, center, space-around);
 
   @include small-screen {
     width: 80%;
@@ -89,12 +144,7 @@
   height: 60px;
   width: 150px;
   border-radius: 50px;
-  // border: 2px solid green;
-  background-image: linear-gradient(
-    to right,
-    rgb(255, 195, 110),
-    rgb(255, 146, 91)
-  );
+  background-image: linear-gradient(to right, #d5b4b4, #ffbf9b);
   position: absolute;
   top: 20px;
   left: 75px;
@@ -135,7 +185,6 @@
 
 .login-box,
 .signup-box {
-  // height: 100%;
   width: 450px;
   padding: 0px 40px;
 
