--- a/social-connect/src/styles/config.scss
+++ b/social-connect/src/styles/config.scss
@@ -1,3 +1,11 @@
+@mixin flex($dir: row, $align: flex-start, $justify: flex-start, $gap: 0) {
+  display: flex;
+  flex-direction: $dir;
+  align-items: $align;
+  justify-content: $justify;
+  gap: $gap;
+}
+
 @mixin small-screen {
   @media screen and (max-width: 480px) {
     @content;
