added loading indicator in google login

--- a/social-connect/src/pages/authenticate/auth.module.scss
+++ b/social-connect/src/pages/authenticate/auth.module.scss
@@ -79,6 +79,10 @@
       &:active {
         background-color: #aec2b6;
       }
+
+      &.button_spin > svg {
+        @include rotate;
+      }
     }
     // Responsive
 
