--- a/social-connect/src/styles/config.scss
+++ b/social-connect/src/styles/config.scss
@@ -6,6 +6,18 @@
   gap: $gap;
 }
 
+@mixin rotate {
+  animation: rotation 2s infinite linear;
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
+}
+
 @mixin small-screen {
   @media screen and (max-width: 480px) {
     @content;
