--- a/social-connect/src/pages/authenticate/_form.scss
+++ b/social-connect/src/pages/authenticate/_form.scss
@@ -51,7 +51,7 @@
 .submit_button {
   margin-top: 1rem;
   padding: 0.5rem 1rem;
-  font-size: 1rem;
+  font-size: 2rem;
   background-color: #3e54ac;
   width: 100%;
   height: 4rem;
@@ -63,15 +63,6 @@
     background-color: #3795bd;
   }
   & > svg {
-    scale: 2.5;
-    animation: rotation 2s infinite linear;
-    @keyframes rotation {
-      from {
-        transform: rotate(0deg);
-      }
-      to {
-        transform: rotate(359deg);
-      }
-    }
+    @include rotate;
   }
 }
