--- a/social-connect/src/components/otpbox/otpbox.module.scss
+++ b/social-connect/src/components/otpbox/otpbox.module.scss
@@ -32,6 +32,17 @@
     font-size: 4rem;
     cursor: pointer;
   }
+  > p {
+    text-align: center;
+    font-size: 2rem;
+    user-select: none;
+    cursor: pointer;
+    margin: 1rem 0;
+
+    &.resendLoading {
+      color: gray;
+    }
+  }
   &.openOtp_box {
     top: 0;
   }
