--- a/social-connect/src/components/otpbox/otpbox.module.scss
+++ b/social-connect/src/components/otpbox/otpbox.module.scss
@@ -39,7 +39,8 @@
     cursor: pointer;
     margin: 1rem 0;
 
-    &.resendLoading {
+    &.disable {
+      cursor: not-allowed;
       color: gray;
     }
   }
