--- a/social-connect/src/components/postbox/postbox.module.scss
+++ b/social-connect/src/components/postbox/postbox.module.scss
@@ -6,6 +6,25 @@
   padding: 10px;
   border-radius: 1rem;
 
+  > button {
+    margin-top: 20px;
+    height: 40px;
+    width: 100%;
+    font-weight: bold;
+    font-size: 1.4rem;
+    background-color: #0078ff;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    &:hover {
+      background-color: #016de9;
+    }
+    &:active {
+      background-color: #0078ff;
+    }
+  }
+
   @include small-screen {
     border-radius: 0;
     border: none;
